--- a/src/main/webapp/WEB-INF/pages/admin/login.html
+++ b/src/main/webapp/WEB-INF/pages/admin/login.html
@@ -17,11 +17,11 @@
 	            <div class="input-box">
 	                <div class="username">
 	                    <div></div>
-	                    <input type="text" name="name" value="${name!}zuo1" class="fs-login-username" id="name" placeholder="请输入用户名"/>
+	                    <input type="text" name="name" value="${name!}" class="fs-login-username" id="name" placeholder="请输入用户名"/>
 	                </div>
 	                <div class="pwd">
 	                    <div></div>
-	                    <input type="password"  name="pwd" value="123456" class="fs-login-password" id="pwd" placeholder="请输入密码"/>
+	                    <input type="password"  name="pwd" value="" class="fs-login-password" id="pwd" placeholder="请输入密码"/>
 	                </div>
 	                ##if(error!=""){
 	                	<div class="error_ms" style="display:block">${error!}</div>
