--- a/src/main/webapp/WEB-INF/pages/admin/labInfoList.html
+++ b/src/main/webapp/WEB-INF/pages/admin/labInfoList.html
@@ -31,7 +31,7 @@
                 <li class="dropdown">
                     <a class=" dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="true">
-                        	 ${user.name!}
+                        	    当前用户：${user.name!}
                     </a>
                 </li>
                <li onclick="logout()"><a href="javascript:void(0);"><span class="glyphicon glyphicon-off"></span>退出</a></li>
