修改地图按钮图标，ulab、PHM和首页之间的跳转

--- a/src/main/webapp/WEB-INF/pages/phm/status.html
+++ b/src/main/webapp/WEB-INF/pages/phm/status.html
@@ -20,7 +20,7 @@
 						<img src="${contextPath}/static/phm/images/status/logo_haier_bold.png" alt="" />
 					</a>
 				</h1>
-				<h2>基于物联网+大数据的用户最佳体验</h2>
+				<h2><a href="${contextPath!}/phm" >基于物联网+大数据的用户最佳体验</a></h2>
 			</div>
 			<!--bottom-->
 			<div id="bottom">
