--- a/src/main/webapp/WEB-INF/pages/phm/health.html
+++ b/src/main/webapp/WEB-INF/pages/phm/health.html
@@ -18,7 +18,7 @@
 						<img src="${contextPath}/static/phm/images/health/logo_haier_bold.png" alt="" />
 					</a>
 				</h1>
-				<h2>基于物联网+大数据的用户最佳体验</h2>
+				<h2><a href="${contextPath!}/phm" >基于物联网+大数据的用户最佳体验</a></h2>
 			</div>
 			<!--centerdata-->
 			<div id="centerData">
