√覆盖专业能力x轴改为非线性 √_从三个圈跳转到ulab时不要片头动画 √_打开中海博睿后默认显示运行状态标签页

--- a/src/main/webapp/WEB-INF/pages/phm/strategy.html
+++ b/src/main/webapp/WEB-INF/pages/phm/strategy.html
@@ -83,7 +83,7 @@
         <!--bottom center-->
         <div class="circleShow">
             <div class="circleBox">
-                <a href="${contextPath!}/lab/index">
+                <a href="${contextPath!}/lab/index?fromPage=fullScreen">
                     <div class="rotatebox rot1"></div>
                     <div class="circle c1">
                         <p class="text1">云数据互联互通</p>
