--- a/src/main/webapp/WEB-INF/pages/phm/strategy.html
+++ b/src/main/webapp/WEB-INF/pages/phm/strategy.html
@@ -14,7 +14,7 @@
 <div id="content">
     <!--head-->
     <div id="head">
-        <h2>互联网时代海尔服务创新—保修期到保证期</h2>
+        <h2>物联网时代海尔质量创新—保修期到保证期</h2>
     </div>
     <!--bottom-->
     <div id="bottom">
@@ -27,22 +27,22 @@
                         <div class="imgbox">
                             <img src="${contextPath}/static/phm/images/strategy/lsm-icon.png" alt=""/>
                         </div>
-                        <p class="txt1">零上门</p>
+                        <p class="txt1">零保修</p>
                         <p class="txt2">远程在线维护</p>
                     </div>
                     <div class="info">
                         <div class="imgbox">
                             <img src="${contextPath}/static/phm/images/strategy/lgz-icon.png" alt=""/>
                         </div>
-                        <p class="txt1">零故障</p>
+                        <p class="txt1">零上门</p>
                         <p class="txt2">事前预判纠偏</p>
                     </div>
                     <div class="info">
                         <div class="imgbox">
                             <img src="${contextPath}/static/phm/images/strategy/zhsh-icon.png" alt=""/>
                         </div>
-                        <p class="txt1">智慧生活</p>
-                        <p class="txt2">网器生态圈</p>
+                        <p class="txt1">零故障</p>
+                        <p class="txt2">使用不坏</p>
                     </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                 </a>
 
                 <div class="arrow"></div>
-                <a href="${contextPath!}/phm/status">
+                <a href="${contextPath!}/phm/health">
                     <div class="rotatebox rot2"></div>
                     <div class="circle">
                         <p class="text1">PHM智能自诊断</p>
@@ -102,8 +102,8 @@
                 <div class="arrow"></div>
                 <div class="rotatebox rot3"></div>
                 <div class="circle">
-                    <p class="text1">产品不坏保证期</p>
-                    <p class="text2">Maintenance Free Operating Period，MFOP</p>
+                    <p class="text1">产品MFOP保证期</p>
+                    <p class="text2">Maintenance Free Operating Period</p>
                 </div>
 
             </div>
