--- a/src/main/webapp/WEB-INF/pages/lab/index.html
+++ b/src/main/webapp/WEB-INF/pages/lab/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <link rel="stylesheet" href="${contextPath!}/static/asserts/css/bootstrap.min.css">
 <link rel="stylesheet" href="${contextPath!}/static/css/common.css">
-<link rel="stylesheet" href="${contextPath!}/static/css/index_left.css">
+<link rel="stylesheet" href="${contextPath!}/static/css/index_left180508.css">
 <link rel="stylesheet" href="${contextPath!}/static/css/index_right.css">
 <!--<link rel="stylesheet" href="${contextPath!}/static/css/fullScreen_map.css">-->
 <!--<script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>-->
@@ -21,9 +21,12 @@
     pageResize();
 </script>
 
-     ##layout("left.html", {}){
+     ##layout("left180508.html", {}){
 	 ##}
 
+
+    ##layout("cover.html", {}){
+    ##}
 
     ##layout("right.html", {}){
     ##}
