样式小修改

--- a/src/main/webapp/WEB-INF/pages/lab/index.html
+++ b/src/main/webapp/WEB-INF/pages/lab/index.html
@@ -50,7 +50,7 @@
 
         //这里是为了方便测试的模拟事件代码，正式使用时请蔽掉
         setTimeout(function () {
-            $("#l").find(".toLabData").click()
+            // $("#l").find(".toLabData").click()
         },1000)
 
 //        $("#r .tab>ul>li:eq(2)").click();
