--- a/src/main/webapp/WEB-INF/pages/phm/index_sys.html
+++ b/src/main/webapp/WEB-INF/pages/phm/index_sys.html
@@ -124,7 +124,7 @@
 				</div>
 				<!--===============centerMod===================-->
 				<div class="centerMod">
-
+					<iframe src="${contextPath}/phm/indexAnimation"></iframe>
 				</div>
 				<!--===============rightMod===================-->
 				<div class="rightMod">
