--- a/src/main/webapp/WEB-INF/pages/lab/flatMap.html
+++ b/src/main/webapp/WEB-INF/pages/lab/flatMap.html
@@ -10,6 +10,7 @@
             margin: 0;
             width: 100%;
             height: 98%;
+            overflow: hidden;
         }
         .mapFlat {
             height: 100%;
