Phm 链接，样式，Ulab大厅地图颜色分类

--- a/src/main/webapp/WEB-INF/pages/phm/phm2.html
+++ b/src/main/webapp/WEB-INF/pages/phm/phm2.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<meta name="PHM" content="phm二期" />
-		<title>phm2</title>
+		<title>PHM首页</title>
 		
 		<link rel="stylesheet" href="${contextPath}/static/phm/css/common.css" />
 		<link rel="stylesheet" href="${contextPath}/static/phm/css/phm2.css" />
@@ -32,7 +32,9 @@
                     <div class="LeftContent fl">
                         <div class="mainTitle">
                             <div class="mainTitleContent">
+                                <a style="color:#6cf;" href="${contextPath!}/phm/health">
                                 <span>自诊断自预测</span>
+                                </a>
                             </div>
 						</div>
 						<div class="currentState">
