--- a/src/main/webapp/WEB-INF/pages/lab/index.html
+++ b/src/main/webapp/WEB-INF/pages/lab/index.html
@@ -50,13 +50,13 @@
 
         //这里是为了方便测试的模拟事件代码，正式使用时请蔽掉
         setTimeout(function () {
-            // $("#l").find(".toLabData").click()
+            $("#l").find(".toLabData").click()
         },1000)
 
-//        $("#r .tab>ul>li:eq(2)").click();
+       // $("#r .tab>ul>li:eq(2)").click();
 //        resetSizeRight();
 
-        $("#cover").show().siblings("#r,#lab").hide();
+        // $("#cover").show().siblings("#r,#lab").hide();
     })
 
 </script>
